--- a/vignettes/intro_to_metad.Rmd
+++ b/vignettes/intro_to_metad.Rmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r models_dir, include = FALSE}
+dir.create("models", showWarnings = FALSE)
+```
+
 ```{r setup}
 library(tidyverse)
 library(brms)
